# fenwick-tree

./: .gitignore  CHANGELOG.md  Fenwick.hs  Fenwick.org  Group.hs  LICENSE  Main.hs  README.md  cabal.project  fenwick-haskell.cabal  fenwick-tree.cabal  fenwick.hs  local.env  mutable-fenwick.cabal
profile/: Fenwick.cpp  Library.hs  LibraryV1.hs  LibraryV2.hs  LibraryV3.hs  Main.hs  Makefile  Standalone.hs  generator.py  profile.sh
src/: MyLib.hs
src/Data/: Group.hs  Modulo.hs
src/Data/Array/: ArrayC.hs
src/Data/Fenwick/: Array.hs  Vector.hs
src/Data/Vector/: VectorC.hs
tests/: FenwickTest.hs
