cabal-version:      2.4
name:               fenwick-tree
version:            0.1.0.0

synopsis: Mutable Fenwick trees

homepage: https://github.com/ParsaAlizadeh/fenwick-tree
bug-reports: https://github.com/ParsaAlizadeh/fenwick-tree/issues

license:            MIT
license-file:       LICENSE
author:             Parsa Alizadeh
maintainer:         parsa.alizadeh1@gmail.com
copyright:          (c) Parsa Alizade, 2025
category:           Data
extra-source-files: CHANGELOG.md

tested-with: GHC == 9.2.8

library
    exposed-modules:
        Data.Modulo,
        Data.Array.ArrayC,
        Data.Vector.VectorC,
        Data.Fenwick.Array,
        Data.Fenwick.Vector

    -- Modules included in this library but not exported.
    -- other-modules:

    build-depends:
        base ^>=4.16.4.0,
        vector ^>=0.13.1.0,
        array ^>=0.5.4.0,
        monoid-subclasses ^>=1.2.5.1,
        commutative-semigroups ^>=0.2.0.1
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options: -Wall -O2
